docs: fix touch event on firefox

--- a/src/components/blocks/side.styl
+++ b/src/components/blocks/side.styl
@@ -101,7 +101,7 @@
     box-shadow 0 2px 5px 0 rgba(0, 0, 0, .12)
 
     &.active
-      height 75vh
+      height 90vh
 
     .bar
       display flex
